[project]
name = "bfs-dfs-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "naufalhanif25",email = "naufal.hanif2525@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
